chore: prevent content jumping

--- a/packages/apps/spaces/pages/contact/contact.module.scss
+++ b/packages/apps/spaces/pages/contact/contact.module.scss
@@ -6,4 +6,5 @@
 }
 .timeline {
   grid-area: timeline;
+  height: 100%;
 }
